# scripts_SENAI_2025

server_checker_v1/: Cargo.toml
server_checker_v1/src/: main.rs
server_checker_v2/: Cargo.toml
server_checker_v2/src/: main.rs
server_checker_v3/: Cargo.toml  README.md  servers.txt
server_checker_v3/src/: main.rs
server_checker_v4/: Cargo.toml  README.md
server_checker_v4/src/: main.rs
